@startuml Class Diagram
skinparam classAttributeIconSize 0

class Game

enum Direction
class Map
class Cell
class Edge
class Position
interface PositionOwner

class Candy
class ExtraCandy

abstract Mob
class Pacman
class Ghost
interface DirectionChooser
class RandomDirectionChooser
class ChaseDirectionChooser
class PlayerDirectionChooser

class Event
class EventManager
interface Observer

Game : is_finished : bool
Game : pacman : Pacman
Game : ghosts : Ghost[]

Cell : x : int
Cell : y : int

Edge : first : Cell
Edge : second : Cell
Edge : {static} length : int
Edge : IsVertical() : bool

Map : candyCnt : int
Map : is_wall : bool[][]
Map : candies : Candy[][]
Map : event_manager : EventManager
Map : EatCandy(Position)

Map : GetAvailableDirections(Position) : tuple<Direction>
Map : GetShortestPath(Position, Position)
Map : GetStraightDistanceSqr(Position, Position)

PositionOwner : GetPosition() : Position


Position : edge : Edge
Position : shift : int

Candy : {static} points : int
Candy : {static} event : Event

ExtraCandy : {static} points : int
ExtraCandy : {static} event : Event

Mob : position : Position
Mob : last_update_time : int
Mob : speed : int
Mob : current_direction : Direction
Mob : {abstract} direction_chooser : DirectionChooser
Mob : UpdatePosition()
Mob : map : Map

Pacman : score

Ghost : sight_radius_sqr : int
Ghost : UpdatePosition()
Ghost : direction_chooser : DirectionChooser

DirectionChooser : ChooseDirection(Position)

ChaseDirectionChooser : aim : PositionOwner
ChaseDirectionChooser : map : Map

PlayerDirectionChooser : required_direction : Direction
PlayerDirectionChooser : SetDirection()

EventManager : observers : Observer[]
EventManager : AddObserver(Observer)
EventManager : Notify(Event)

Observer : HandleEvent(Event)

Game o-- Mob
Game o-- Map

PositionOwner <|-- Mob

Mob <|-- Pacman
Mob <|-- Ghost

DirectionChooser <|-- RandomDirectionChooser
DirectionChooser <|-- ChaseDirectionChooser
DirectionChooser <|-- PlayerDirectionChooser

Mob *-- DirectionChooser

Observer <|-- Ghost

Event -- EventManager

Position o-- Edge

Edge o-- Cell

Map o-- EventManager
Map *-- Candy

EventManager o-- Observer

Candy <|-- ExtraCandy
@enduml
